--- a/build.gradle
+++ b/build.gradle
@@ -17,7 +17,7 @@ repositories {
 }
 
 group = 'net.packet'
-version = '1.0.0-SNAPSHOT'
+version = '1.0.0'
 sourceCompatibility = javaVersion
 
 // Project dependencies
